--- a/css/styles.css
+++ b/css/styles.css
@@ -63,3 +63,15 @@ footer {
     font-size: 15px;
   }
 }
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  gap: 16px;
+  margin-top: 32px;
+}
+.gallery img {
+  width: 100%;
+  object-fit: cover;
+  border: 1px solid #000;
+}
